# synthizer-rust-rewrite

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  rust-toolchain.toml
.claude/: settings.local.json
.github/workflows/: ci.yaml
crates/allocation/: Cargo.toml
crates/allocation/src/: allocation_page.rs  allocation_strategies.rs  allocator.rs  lib.rs  projection.rs  shared_ptr.rs
crates/allocation/src/allocation_strategies/: paged.rs  simple_box.rs
crates/audio_synchronization/: Cargo.toml
crates/audio_synchronization/src/: concurrent_slab.rs  fast_thread_id.rs  fixed_size_pool.rs  generational_atomic.rs  lib.rs  mpsc_counter.rs  optional_atomic_u32.rs  prepend_only_list.rs  spsc_queue.rs  spsc_ring.rs  sync.rs
crates/cond_tree/: Cargo.toml
crates/cond_tree/src/: lib.rs  maybe_int.rs
crates/cond_tree/tests/: tests.rs
crates/cond_tree_macro/: Cargo.toml
crates/cond_tree_macro/src/: lib.rs
crates/datasets/: Cargo.toml  build.rs
crates/datasets/src/: hrtf.rs  lib.rs
crates/dsp/: Cargo.toml
crates/dsp/benches/: convolution.rs
crates/dsp/src/: channel_conversion.rs  close_floats.rs  config.rs  db.rs  lib.rs  output_buffer.rs  time.rs
crates/dsp/src/convolution/: direct.rs  mod.rs
crates/dsp/src/views/: input.rs  iter.rs  meta.rs  mod.rs  output.rs  structs.rs
crates/eye_dropper/: Cargo.toml
crates/eye_dropper/src/: lib.rs
crates/integration_tests/: Cargo.toml
crates/integration_tests/src/: cli_args.rs  context.rs  environment.rs  main.rs  registration_macro.rs  registry.rs  reporter.rs  test_config.rs  test_filtering.rs  test_runner.rs
crates/integration_tests/src/commands/: list.rs  mod.rs  run.rs  subprocess_entry_point.rs  view_response.rs
crates/integration_tests/src/process_coordination/: exec_subprocess.rs  log_handler.rs  mod.rs  panic_handler.rs  parent_process.rs  protocol.rs  subprocess_entrypoint.rs
crates/integration_tests/src/tests/: basic_sine.rs  framework_self_test.rs  mod.rs
crates/integration_tests/src/validators/: function.rs  mod.rs  range.rs
crates/miniaudio/: Cargo.toml  build.rs
crates/miniaudio/examples/: binaural.rs  enumerate.rs
crates/miniaudio/src/: c_binding.rs  device.rs  errors.rs  initialization.rs  lib.rs  miniaudio_dispatch.rs
crates/miniaudio/src/c/: miniaudio_wrapper.c  miniaudio_wrapper.h
crates/protos/: Cargo.toml  build.rs
crates/protos/src/: hrtf.proto  lib.rs
crates/supermatch/: Cargo.toml
crates/supermatch/src/: lib.rs
crates/supermatch/tests/: tests.rs
crates/supermatch_macro/: Cargo.toml
crates/supermatch_macro/src/: lib.rs
crates/synthizer/: Cargo.toml
crates/synthizer/benches/: bfs_stager.rs  convolution.rs  fast_xoroshiro.rs  stager.rs
crates/synthizer/examples/: binaural_beats.rs  bus_mixer.rs  delay_line.rs  enumerate_devices.rs  media_player.rs  simple_bus_demo.rs  sin_chords.rs  sine.rs  stream_file.rs  two_sine_waves.rs  vec_sample_source.rs  wavetable_player.rs  write_wave_file.rs
crates/synthizer/src/: array_utils.rs  audio_device.rs  audio_frames.rs  background_drop.rs  bench_reexport.rs  biquad.rs  builder_helpers.rs  bus.rs  chain.rs  chain_mathops.rs  channel_conversion.rs  channel_format.rs  command.rs  common_commands.rs  config.rs  context.rs  core_traits.rs  cpal_device.rs  deferred_arc_swap.rs  deferred_freeing.rs  error.rs  fast_xoroshiro.rs  graph.rs  handle.rs  inline_any.rs  internal_object_handle.rs  is_audio_thread.rs  lib.rs  logging.rs  loop_spec.rs  mark_dropped.rs  maybe_int.rs  mount_point.rs  node.rs  node_descriptor.rs  object_pool.rs  option_recycler.rs  program.rs  properties.rs  resampling.rs  (+9 more)
crates/synthizer/src/block_stream_conversion/: block_to_stream.rs  mod.rs
crates/synthizer/src/convolution/: direct.rs
crates/synthizer/src/data_structures/: add_only.rs  audio_graph.rs  bfs_stager.rs  block_allocator.rs  change_tracker.rs  deferred_arc_swap.rs  deferred_queue.rs  edgemap.rs  exclusive_thread_cell.rs  graph.rs  mod.rs  node_dependency_graph.rs  object_pool.rs  refillable_wrapper.rs  splittable_buffer.rs  stager.rs
crates/synthizer/src/datasets/: hrtf.rs
crates/synthizer/src/math/: mod.rs  trig_waveforms.rs
crates/synthizer/src/nodes/: audio_output.rs  descriptor.rs  mod.rs  sample_source_player.rs  traits.rs  trig.rs
crates/synthizer/src/sample_sources/: buffered.rs  driver.rs  executor.rs  mod.rs  reader.rs  resampler.rs  symphonia_impl.rs  unified_media.rs  vec_source.rs
crates/synthizer/src/sample_sources/encoded/: mod.rs  symphonia_impl.rs
crates/synthizer/src/sample_sources/execution/: buffered.rs  cross_thread.rs  driver.rs  executor.rs  loop_driver.rs  mod.rs  reader.rs  resampler.rs
crates/synthizer/src/server/: audio_output_server.rs  audio_output_thread.rs  implementation.rs  mod.rs
crates/synthizer/src/signals/: and_then.rs  audio_io.rs  boxed.rs  bypass.rs  clock.rs  consume_input.rs  conversion.rs  delay_line.rs  frame_batcher.rs  join.rs  map.rs  map_frame.rs  map_input.rs  media.rs  mod.rs  null.rs  periodic_f64.rs  sample_source.rs  scalars.rs  slots.rs  start_from_input.rs  trig.rs  wavetable.rs
crates/synthizer/src/views/: meta.rs  mod.rs  output.rs  structs.rs
crates/synthizer/src/worker_pool/: inline.rs  mod.rs  threaded.rs
crates/synthizer_macros_internal/: Cargo.toml
crates/synthizer_macros_internal/src/: derive_named_inputs_outputs.rs  lib.rs  property_slots_impl.rs  utils.rs
data_processor/: main.py  requirements.txt
data_processor/protos/: hrtf_pb2.py
