[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
ahash = "0.8.12"
anyhow = "1.0.98"
arc-swap = "1.7.1"
audio_synchronization = { path = "crates/audio_synchronization" }
arrayvec = "0.7.6"
atomic_refcell = "0.1.13"
bytemuck = "1.23.1"
cc = "1.2.30"
cpal = "0.16"
criterion = "0.7"
crossbeam = "0.8.4"
derivative = "2.2.0"
derive_more = { version = "2", features = ["full"] }
env_logger = "0.11"
eye_dropper = { path = "crates/eye_dropper" }
hound = "3.5.1"
itertools = "0.14"
lazy_static = "1.5.0"
log = "0.4.27"
loom = "0.7"
num = "0.4.3"
paste = "1.0.15"
pretty_assertions = "1.4.1"
primes = "0.4"
proptest = "1.7.0"
prost = "0.14"
prost-build = "0.14"
rand = "0.9"
rand_xoshiro = "0.7"
rayon = "1.10.0"
reciprocal = "0.1.2"
rpds = "1.1.1"
rubato = "0.16.2"
seq-macro = "0.3.6"
smallvec = { version = "1.15.1", features = ["write"] }
spin = "0.10"
symphonia = { version = "0.5.4", features = ["all-codecs"] }
sync_wrapper = "1.0"
synthizer_macros_internal = { path = "crates/synthizer_macros_internal" }
synthizer_protos = { path = "crates/protos" }
thingbuf = { version = "0.1.6", features = ["static"] }
thiserror = "2.0.12"

[profile.dev]
panic = "abort"

[profile.bench]
lto = true
