[package]
name = "audio_synchronization"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
eye_dropper.workspace = true
pretty_assertions.workspace = true
proptest.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[target.'cfg(loom)'.dependencies]
loom.workspace = true
