[package]
name = "synthizer_datasets"
version = "0.1.0"
edition = "2021"
build = "build/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[build-dependencies]
primes = "0.3.0"
itertools.workspace = true
prost.workspace = true
synthizer_protos.workspace = true
