[package]
name = "synthizer_dsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cond_tree.workspace = true
derive_more.workspace = true
num.workspace = true
smallvec.workspace = true
thiserror.workspace = true

[dev-dependencies]
paste.workspace = true
criterion.workspace = true

[[bench]]
name = "convolution"
harness = false
