[package]
name = "synthizer_integration_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
derive_builder.workspace = true
derive_more.workspace = true
globset.workspace = true
indenter.workspace = true
inventory.workspace = true
itertools.workspace = true
lazy_static.workspace = true
log.workspace = true
once_cell.workspace = true
paste.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
synthizer.workspace = true
