[package]
name = "syz_miniaudio"
version = "0.1.0"
edition = "2021"
# We can change this as we release versions. Cargo will make sure that only one instance of this crate is in the tree
# per major version, if this is present.  We don't particularly care if we have two major versions in the tree because
# we make the version part of the name mangling in the wrappers, but we don't want two minor versions because that will
# produce conflicting symbols.
links = "syz_miniaudio_0_1"

[dependencies]
crossbeam.workspace = true
lazy_static.workspace = true
log.workspace = true
paste.workspace = true
thiserror.workspace = true

[build-dependencies]
cc.workspace = true

[dev-dependencies]
env_logger.workspace = true
