[package]
name = "synthizer_protos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes.workspace = true
prost.workspace = true

[build-dependencies]
prost-build.workspace = true
prost.workspace = true
