[package]
name = "synthizer"
version = "0.1.0"
edition = "2021"
build = "build/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap.workspace = true
arrayvec.workspace = true
atomic_refcell.workspace = true
derive_more.workspace = true
num.workspace = true
rand.workspace = true
rand_xoshiro.workspace = true
sharded-slab.workspace = true
smallvec.workspace = true
thiserror.workspace = true
supermatch.workspace = true

[dev-dependencies]
paste.workspace = true
petgraph.workspace = true
proptest.workspace = true
criterion.workspace = true

[build-dependencies]
primes.workspace = true
itertools.workspace = true
prost.workspace = true
synthizer_protos.workspace = true

[[bench]]
name = "convolution"
harness = false

[[bench]]
name = "fast_xoroshiro"
harness = false
