[package]
name = "synthizer"
version = "0.1.0"
edition = "2021"
build = "build/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash.workspace = true
arc-swap.workspace = true
arrayvec.workspace = true
atomic_refcell.workspace = true
audio_synchronization.workspace = true
crossbeam.workspace = true
derivative.workspace = true
derive_more.workspace = true
lazy_static.workspace = true
log.workspace = true
paste.workspace = true
num.workspace = true
rand.workspace = true
rand_xoshiro.workspace = true
rayon.workspace = true
rpds.workspace = true
rubato.workspace = true
smallvec.workspace = true
spin.workspace = true
symphonia.workspace = true
synthizer_miniaudio.workspace = true
thingbuf.workspace = true
thiserror.workspace = true

[dev-dependencies]
anyhow.workspace = true
criterion.workspace = true
env_logger.workspace = true
hound.workspace = true
proptest.workspace = true

[build-dependencies]
primes.workspace = true
itertools.workspace = true
prost.workspace = true
synthizer_protos.workspace = true

[[bench]]
name = "fast_xoroshiro"
harness = false
